更新總數字

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
     />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="google-site-verification" content="5z7kgiNYotv7SHjCCi5xTtyRl8PD_9NoQluG16P749E" />
+    <meta
+      name="google-site-verification"
+      content="5z7kgiNYotv7SHjCCi5xTtyRl8PD_9NoQluG16P749E"
+    />
     <link rel="icon" href="zoengjyutgaai.webp" type="image/webp" />
     <title>張悦楷講古語音數據集</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -107,7 +110,7 @@
               Total Duration
             </h3>
             <p class="text-lg font-semibold m-4 text-black">
-              112.54 個鐘 hours <br />（6752.70 分鐘 minutes）
+              188.67 個鐘 hours <br />（11320.2 分鐘 minutes）
             </p>
           </div>
           <div class="bg-white rounded-lg text-center my-12">
@@ -115,7 +118,7 @@
               總字數（含標點） <br />
               Total # Characters (including punctuation)
             </h3>
-            <p class="text-lg font-semibold m-4 text-black">1,679,097</p>
+            <p class="text-lg font-semibold m-4 text-black">2,903,094</p>
           </div>
           <div class="bg-white rounded-lg text-center my-12">
             <h3 class="text-2xl text-gray-500">
@@ -130,13 +133,14 @@
           <h2 class="text-3xl my-8">介紹 Introduction</h2>
           <p class="text-gray-700 text-xl mb-4">
             本數據集由廣州最出名嘅話劇演員、説書藝人（講古佬）張悦楷喺 1980
-            年代電台播講《三國演義》《水滸傳》《走進毛澤東的最後歲月》嘅錄音製成。數據集所有文本均由人工轉寫，並根據原文校對嚟確保準確性。
+            年代電台播講《三國演義》《水滸傳》《走進毛澤東的最後歲月》《鹿鼎記》嘅錄音製成。數據集所有文本均由人工轉寫，並根據原文校對嚟確保準確性。
           </p>
           <p class="text-gray-700 text-xl my-4">
             This dataset was made from recordings of Zoeng Jyut Gaai, the most
             famous drama actor and storyteller in Canton, storytelling
-            <em>Romance of the Three Kingdoms</em>, <em>Water Margin</em> and
-            <em>The Final Days of Mao Zedong</em> during the 1980s. All texts in
+            <em>Romance of the Three Kingdoms</em>, <em>Water Margin</em>,
+            <em>The Final Days of Mao Zedong</em> and
+            <em>The Deer and the Cauldron</em> during the 1980s. All texts in
             the dataset were transcribed manually and proofread according to the
             original text of <em>Romance of the Three Kingdoms </em> to ensure
             accuracy.
