更新鹿鼎記數據

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               Total Duration
             </h3>
             <p class="text-lg font-semibold m-4 text-black">
-              188.67 個鐘 hours <br />（11320.2 分鐘 minutes）
+              188.25 個鐘 hours <br />（11295.07 分鐘 minutes）
             </p>
           </div>
           <div class="bg-white rounded-lg text-center my-12">
@@ -337,6 +337,9 @@ git pull origin main</code></pre>
                 <th class="border px-4 py-2 border-black border-0 text-lg">
                   走進毛澤東的最後歲月 mouzaakdung
                 </th>
+                <th class="border px-4 py-2 border-black border-0 text-lg">
+                  鹿鼎記 lukdinggei
+                </th>
               </tr>
             </thead>
             <tbody>
@@ -345,7 +348,7 @@ git pull origin main</code></pre>
                   總時長 Total Duration (個鐘 hours | 分鐘 minutes)
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  112.10 | 6752.70
+                  188.25 | 11295.07
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   66.01 | 3960.73
@@ -356,13 +359,16 @@ git pull origin main</code></pre>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   7.91 | 474.49
                 </td>
+                <td class="border px-4 py-2 border-black border-0 text-lg">
+                  75.71 | 4542.37
+                </td>
               </tr>
               <tr>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   平均音頻時長 Average Clip Duration (秒 seconds)
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  5.901
+                  5.826
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   6.067
@@ -373,13 +379,16 @@ git pull origin main</code></pre>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   6.004
                 </td>
+                <td class="border px-4 py-2 border-black border-0 text-lg">
+                  5.718
+                </td>
               </tr>
               <tr>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   中位音頻時長 Median Clip Duration (秒 seconds)
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  5.443
+                  5.385
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   5.607
@@ -389,6 +398,9 @@ git pull origin main</code></pre>
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   5.553
+                </td>
+                <td class="border px-4 py-2 border-black border-0 text-lg">
+                  5.302
                 </td>
               </tr>
               <tr>
@@ -407,6 +419,9 @@ git pull origin main</code></pre>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   0.735
                 </td>
+                <td class="border px-4 py-2 border-black border-0 text-lg">
+                  0.329
+                </td>
               </tr>
               <tr>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
@@ -424,6 +439,9 @@ git pull origin main</code></pre>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   21.252
                 </td>
+                <td class="border px-4 py-2 border-black border-0 text-lg">
+                  31.528
+                </td>
               </tr>
               <tr>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
@@ -431,7 +449,7 @@ git pull origin main</code></pre>
                   punctuation
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  24.36
+                  24.90
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   24.00
@@ -441,6 +459,9 @@ git pull origin main</code></pre>
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   24.77
+                </td>
+                <td class="border px-4 py-2 border-black border-0 text-lg">
+                  25.68
                 </td>
               </tr>
               <tr>
@@ -460,22 +481,28 @@ git pull origin main</code></pre>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   23
                 </td>
+                <td class="border px-4 py-2 border-black border-0 text-lg">
+                  24
+                </td>
               </tr>
               <tr>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   文本總字數，含標點 Total Characters, including punctuation
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  1679097
+                  2,903,094
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  952427
+                  952,427
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  621682
+                  621,682
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  117308
+                  117,308
+                </td>
+                <td class="border px-4 py-2 border-black border-0 text-lg">
+                  1,223,997
                 </td>
               </tr>
               <tr>
@@ -483,7 +510,7 @@ git pull origin main</code></pre>
                   覆蓋漢字數 Unique Chinese Characters Coverage
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  4597
+                  5017
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   3993
@@ -494,6 +521,9 @@ git pull origin main</code></pre>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   2709
                 </td>
+                <td class="border px-4 py-2 border-black border-0 text-lg">
+                  4130
+                </td>
               </tr>
               <tr>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
@@ -501,7 +531,7 @@ git pull origin main</code></pre>
                   (字/秒 characters per second)
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
-                  4.14
+                  4.28
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   3.96
@@ -511,6 +541,9 @@ git pull origin main</code></pre>
                 </td>
                 <td class="border px-4 py-2 border-black border-0 text-lg">
                   4.12
+                </td>
+                <td class="border px-4 py-2 border-black border-0 text-lg">
+                  4.49
                 </td>
               </tr>
             </tbody>
