--- a/index.html
+++ b/index.html
@@ -136,17 +136,16 @@
             年代電台播講《三國演義》《水滸傳》《走進毛澤東的最後歲月》《鹿鼎記》嘅錄音製成。數據集所有文本均由人工轉寫，並根據原文校對嚟確保準確性。
           </p>
           <p class="text-gray-700 text-xl my-4">
-            This dataset was made from recordings of Zoeng Jyut Gaai, the most
-            famous drama actor and storyteller in Canton, storytelling
+            This dataset is made from the recordings of Zoeng Jyut Gaai, the
+            most famous drama actor and storyteller in Canton, storytelling
             <em>Romance of the Three Kingdoms</em>, <em>Water Margin</em>,
             <em>The Final Days of Mao Zedong</em> and
-            <em>The Deer and the Cauldron</em> during the 1980s. All texts in
-            the dataset were transcribed manually and proofread according to the
-            original text of <em>Romance of the Three Kingdoms </em> to ensure
-            accuracy.
+            <em>The Deer and the Cauldron</em> during the 1980s. All text in
+            the dataset is transcribed by human and proofread according to the
+            original text of the books to ensure accuracy.
           </p>
           <p class="text-gray-700 text-xl my-4">
-            本數據集可用於各種用途，例如語音合成（TTS）、語音識別（ASR）、語言模型（LLM）、語言學分析等等。<a
+            本數據集可用於各種用途，例如語音合成（TTS）、語音識別（ASR）、語言模型（LLM）、語言學研究等等。<a
               href="https://huggingface.co/spaces/laubonghaudoi/zoengjyutgaai_tts"
               class="underline"
             >
@@ -156,7 +155,7 @@
           <p class="text-gray-700 text-xl my-4">
             This dataset is multi-purposed. It can be used for Text-To-Speech
             (TTS), Automatic Speech Recognition (ASR), Language Modeling,
-            linguistics analysis, etc. As an example,
+            linguistics research, etc. As an example,
             <a
               href="https://huggingface.co/spaces/laubonghaudoi/zoengjyutgaai_tts"
               class="underline"
